--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+:root{
+  --repeat: 10;
+}
+
 html,
 body {
   height: 100vh;
@@ -49,6 +53,8 @@ main {
 
 .slider__detail{
   font-size: 2rem;
+  width: 250px;
+  text-align: center;
 }
 
 .slider__input {
@@ -89,12 +95,24 @@ main {
   margin-top: 5rem;
   width: 600px;
   height: 600px;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   position: relative;
   z-index: 2;
   margin-right: 5rem;
   display: grid;
-  grid-template-columns: repeat();
+  grid-template-columns: repeat(var(--repeat), 1fr);
+  grid-template-rows: repeat(var(--repeat), 1fr);
+}
+
+.hover__border{
+  border: 1.5px solid black;
+}
+
+.hover__small{
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  cursor: pointer;
 }
 
 .option{
@@ -121,6 +139,11 @@ main {
 .option__each:hover{
   background-color: white;
   color: black;
+}
+
+.active{
+  background-color: white;
+  color: black; 
 }
 
 .option__each input{
