--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 :root{
   --repeat: 10;
+  --curr-color: white;
 }
 
 html,
@@ -102,16 +103,31 @@ main {
   display: grid;
   grid-template-columns: repeat(var(--repeat), 1fr);
   grid-template-rows: repeat(var(--repeat), 1fr);
+  box-shadow: 2px 2px 20px 10px var(--curr-color);
+  transition: box-shadow .5s ease;
+  position: relative;
+}
+
+.hover::after{
+  content: "Hover to start the Party !!!";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  white-space: nowrap;
+  z-index: -1;
+  color: lawngreen;
 }
 
 .hover__border{
-  border: 1.5px solid black;
+  border: .5px solid white;
 }
 
 .hover__small{
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: transparent;
   cursor: pointer;
 }
 
@@ -142,7 +158,7 @@ main {
 }
 
 .active{
-  background-color: white;
+  background-color: rgb(0, 238, 255);
   color: black; 
 }
 
