--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --repeat: 10;
   --curr-color: white;
   --prv1-color: transparent;
   --prv2-color: transparent;
+  --dancing-script: "Dancing Script", cursive;
+  --indie-flower: 'Indie Flower', cursive;
 }
 
 html,
@@ -25,18 +27,12 @@ body {
   display: flex;
   flex-direction: column;
   color: yellow;
-
-  /* overscroll-behavior: none;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; */
+  font-family: var(--indie-flower);
+  overflow-x: hidden;
 }
 
-body::before{
-  content: '';
+body::before {
+  content: "";
   width: clamp(20px, 8vw, 50px);
   height: clamp(20px, 8vw, 50px);
   top: 0;
@@ -45,8 +41,8 @@ body::before{
   background-color: var(--prev2-color);
   position: absolute;
 }
-body::after{
-  content: '';
+body::after {
+  content: "";
   width: clamp(20px, 8vw, 50px);
   height: clamp(20px, 8vw, 50px);
   top: 0;
@@ -59,10 +55,12 @@ body::after{
 header {
   padding-top: 2.5rem;
   font-size: clamp(1rem, 4vw, 2rem);
+  font-family: var(--dancing-script);
 }
 
 h1 {
   text-align: center;
+  font-family: inherit;
 }
 
 main {
@@ -74,7 +72,7 @@ main {
   z-index: 0;
 }
 
-.slider{
+.slider {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,8 +80,8 @@ main {
   margin-right: 2rem;
 }
 
-.slider__detail{
-  font-size: clamp(.8rem, 5vw, 2rem);
+.slider__detail {
+  font-size: clamp(0.8rem, 5vw, 2rem);
   width: 250px;
   color: lawngreen;
   text-align: center;
@@ -99,7 +97,6 @@ main {
   border-radius: 8px;
   margin: 2rem 0;
 }
-
 
 /* for chrome/safari */
 .slider__input::-webkit-slider-thumb {
@@ -137,145 +134,144 @@ main {
   grid-template-columns: repeat(var(--repeat), 1fr);
   grid-template-rows: repeat(var(--repeat), 1fr);
   box-shadow: 0px 0px 10px 10px var(--curr-color);
-  transition: box-shadow .5s ease;
+  transition: box-shadow 0.5s ease;
   position: relative;
 }
 
-.hover::after{
+.hover::after {
   content: "Hover to start the Party !!!";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: clamp(1rem, 5vw, 2rem);
+  font-size: clamp(1rem, 5vw, 2.5rem);
   white-space: nowrap;
   z-index: -1;
   color: lawngreen;
 }
 
-.hover__border > *{
-  border: .5px solid white;
+.hover__border > * {
+  border: 0.5px solid white;
 }
 
-.hover__small{
+.hover__small {
   width: 100%;
   height: 100%;
   background-color: transparent;
   cursor: pointer;
 }
 
-
-.option__info{
+.option__info {
   font-size: 1.4rem;
   margin-bottom: clamp(1rem, 5vw, 2rem);
   width: 200px;
   text-align: center;
 }
 
-.option__each{
+.option__each {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  font-size: clamp(0.8rem , 3vw, 1.4rem);
+  font-size: clamp(0.8rem, 3vw, 1.4rem);
   border: 2px solid lawngreen;
   color: yellow;
-  padding: .8rem 0;
+  padding: 0.8rem 0;
   width: clamp(150px, 10vw, 200px);
   margin: 2rem 0;
   cursor: pointer;
 }
 
-.option__each:hover{
+.option__each:hover {
   background-color: white;
   color: black;
 }
 
-.option__each input{
+.option__each input {
   margin-left: 1rem;
 }
 
-footer{
+footer {
   height: 150px;
   display: flex;
   justify-content: space-between;
-  padding: 0 clamp(0.2rem,5vw, 2rem);
+  padding: 0 clamp(0.2rem, 5vw, 2rem);
   align-items: flex-end;
-  font-size: clmap(.8rem, 3vw, 1.4rem);
+  font-size: clamp(0.8rem, 5vw, 1.6rem);
   padding-bottom: 1rem;
+  font-family: var(--dancing-script);
 }
 
-.odin{
+.odin {
   display: flex;
   align-items: flex-end;
 }
 
-.odin img{
+.odin img {
   height: clamp(20px, 8vw, 50px);
 }
 
-.github{
+.github {
   display: flex;
 }
 
-.github svg{
+.github svg {
   color: var(--curr-color);
   width: clamp(20px, 8vw, 50px);
 }
 
-a{
+a {
   text-decoration: none;
   color: lawngreen;
 }
 
-a:hover{
+a:hover {
   color: yellow;
 }
 
-a:hover svg{
+a:hover svg {
   color: yellow;
 }
 
-.active{
+.active {
   background-color: rgb(0, 238, 255);
-  color: black; 
+  color: black;
 }
 
 .none {
   display: none;
 }
 
-@media (max-width: 1200px){
-  main{
+@media (max-width: 1200px) {
+  main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  header{
+  header {
     padding: 1rem;
   }
 
-  .slider{
+  .slider {
     margin: 0;
   }
-  
 
-  .hover{
+  .hover {
     margin: 1rem auto;
   }
 
-  .option{
+  .option {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
   }
 
-  .option > *{
+  .option > * {
     margin: 2rem 1rem 0 1rem;
   }
 
-  footer{
+  footer {
     height: 100px;
   }
 }
