--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html,
 body {
   width: 100vw;
   min-height: 100vh;
-  background: url("./Assets/bg.jpg");
+  background: url("./Assets/bg-min.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
